feat(emacs): enable short y/n confirmation responses for faster interaction

--- a/applications/emacs/init.org
+++ b/applications/emacs/init.org
@@ -29,6 +29,13 @@ Highlight the cursor line.
 (global-hl-line-mode 1)
 #+end_src
 
+Accept single-character =y= / =n= responses
+instead of requiring the full word =yes= / =no=.
+
+#+begin_src emacs-lisp
+(setq use-short-answers t)
+#+end_src
+
 ** Darwin
 On macOS, Emacs cannot inherit environment variables (such as ~$PATH~) from the shell,
 so [[https://github.com/purcell/exec-path-from-shell][exec-path-from-shell]] is needed as a workaround.
