fix(emacs): use :custom for notmuch variables to ensure proper initialization
:config with setq runs after the package loads but does not integrate
with the Customize system, so notmuch-fcc-dirs and
notmuch-search-oldest-first were not being set reliably. :custom sets
them before package initialization, ensuring they take effect.

--- a/applications/emacs/init.org
+++ b/applications/emacs/init.org
@@ -482,9 +482,9 @@ avoiding a second indexer for the same maildir.
 (use-package notmuch
   :ensure nil
   :bind ("C-c M" . notmuch)
-  :config
-  (setq notmuch-fcc-dirs nil)
-  (setq notmuch-search-oldest-first nil))
+  :custom
+  (notmuch-fcc-dirs nil)
+  (notmuch-search-oldest-first nil))
 #+end_src
 
 [[https://orgmode.org/manual/Protocols.html][ol-notmuch]] integrates notmuch with Org mode's link system.
