--- a/po/ja.po
+++ b/po/ja.po
@@ -6,8 +6,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2026-02-24 00:51+0900\n"
-"PO-Revision-Date: 2026-02-21 01:51+0900\n"
+"POT-Creation-Date: 2026-02-24 12:34+0900\n"
+"PO-Revision-Date: 2026-02-21 00:30+0900\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
 "Language: ja\n"
@@ -40,13 +40,13 @@ msgstr ""
 #: README.org:5
 #, no-wrap
 msgid "About"
-msgstr ""
+msgstr "概要"
 
 #. type: heading *
 #: README.org:7
 #, no-wrap
 msgid "Philosophy"
-msgstr ""
+msgstr "設計思想"
 
 #. type: property (EXPORT_FILE_NAME)
 #: README.org:9
@@ -74,6 +74,11 @@ msgid ""
 "the build system captures why a particular configuration exists, or why "
 "alternatives were rejected."
 msgstr ""
+"Nixは宣言的なシステムです。\n"
+"Nixで書かれたコードを読めばシステムがどうあるべきかわかりますし、\n"
+"Nix自身がその状態にするために自動的に処理してくれます。\n"
+"しかしそのコードからもビルドシステムからも、なぜその設定になっているのか、\n"
+"なぜ他の選択肢を取らなかったのか知ることはできません。"
 
 #. type: paragraph
 #: README.org:19
@@ -84,6 +89,13 @@ msgid ""
 "it.  Without this context, future changes risk undoing intentional tradeoffs "
 "or repeating previously rejected approaches."
 msgstr ""
+"なぜzshやbashではなくfishを選んだのか？\n"
+"どうしてこのサービスはデスクトップ環境でのみ使われているのか？\n"
+"この古いバージョンのパッケージを使い続けてるのはなぜなのか？\n"
+"コードは決定事項は語りますが、その背景となる事由には口をつぐみます。\n"
+"もしこの決定の理由がわからなければ将来の変更に\n"
+"意図したトレードオフが失われたり既に検討し却下したアプローチを\n"
+"再度採用したりしてしまう危険性が伴うことになるでしょう。"
 
 #. type: paragraph
 #: README.org:25
@@ -93,6 +105,13 @@ msgid ""
 "high-level architecture to individual package overrides—is accompanied by "
 "its rationale: why this approach was chosen, and why alternatives were not."
 msgstr ""
+"このリポジトリではこの設定の意図を残すために文芸的プログラミングの手法を採用"
+"して\n"
+"います。\n"
+"設定はOrg modeのドキュメントとして、コードとともに記録されます。\n"
+"高レベルのアーキテクチャ設計から個々のパッケージのオーバーライドにいたるま"
+"で、\n"
+"あらゆる決定についてその選択理由や採用されなかった代替案が記述されています。"
 
 #. type: paragraph
 #: README.org:30
@@ -101,6 +120,10 @@ msgid ""
 "alternatives considered, and the reasoning behind the final choice. For "
 "temporary workarounds, the conditions for removal are also noted."
 msgstr ""
+"設定はその背景となる事柄、その他の選択肢、最終決定の理由とともに文書化されま"
+"す。\n"
+"他にも一時的な回避策の場合、その措置をいつ削除できるのかといった条件も記録さ"
+"れます。"
 
 #. type: heading ***
 #: README.org:34 applications/emacs/init.org:292 modules/configuration.org:82
@@ -3421,9 +3444,9 @@ msgid ""
 "(use-package notmuch\n"
 "  :ensure nil\n"
 "  :bind (\"C-c M\" . notmuch)\n"
-"  :config\n"
-"  (setq notmuch-fcc-dirs nil)\n"
-"  (setq notmuch-search-oldest-first nil))"
+"  :custom\n"
+"  (notmuch-fcc-dirs nil)\n"
+"  (notmuch-search-oldest-first nil))"
 msgstr ""
 
 #. type: paragraph
