--- a/po/dotfiles.pot
+++ b/po/dotfiles.pot
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2026-02-24 00:51+0900\n"
+"POT-Creation-Date: 2026-02-24 12:34+0900\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -3433,9 +3433,9 @@ msgid ""
 "(use-package notmuch\n"
 "  :ensure nil\n"
 "  :bind (\"C-c M\" . notmuch)\n"
-"  :config\n"
-"  (setq notmuch-fcc-dirs nil)\n"
-"  (setq notmuch-search-oldest-first nil))"
+"  :custom\n"
+"  (notmuch-fcc-dirs nil)\n"
+"  (notmuch-search-oldest-first nil))"
 msgstr ""
 
 #. type: paragraph
