feat(emacs): add C-c l keybinding for org-store-link to complement org-capture

--- a/applications/emacs/init.org
+++ b/applications/emacs/init.org
@@ -342,6 +342,7 @@ to prevent lines from becoming unnecessarily long.
 ** org-capture
 #+begin_src emacs-lisp
 (global-set-key (kbd "C-c c") 'org-capture)
+(global-set-key (kbd "C-c l") 'org-store-link)
 
 (setq org-root "~/dropbox/org/")
 
