feat(emacs): add indent-bars to improve code readability
Add indent-bars package for visual indentation guidance with tree-sitter
support. The scope-aware highlighting helps identify nesting levels at a
glance, making it easier to navigate complex nested code structures.

--- a/applications/emacs/init.org
+++ b/applications/emacs/init.org
@@ -94,6 +94,18 @@ other packages can inherit the correct environment.
   (breadcrumb-mode))
 #+end_src
 
+** indent-bars
+
+[[https://github.com/jdtsmith/indent-bars][indent-bars]] displays configurable vertical guide bars at each indentation level.
+Tree-sitter integration is available for scope-aware highlighting,
+where bars outside the current scope are de-emphasized.
+
+#+begin_src emacs-lisp
+(use-package indent-bars
+  :ensure t
+  :hook (prog-mode . indent-bars-mode))
+#+end_src
+
 * minibuffer
 Referring to https://protesilaos.com/codelog/2024-11-28-basic-emacs-configuration/
 #+begin_src emacs-lisp
