--- a/po/ja.po
+++ b/po/ja.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: 2026-03-01 14:11+0900\n"
-"PO-Revision-Date: 2026-02-21 00:30+0900\n"
+"PO-Revision-Date: 2026-03-01 14:13+0900\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
 "Language: ja\n"
@@ -4096,9 +4096,8 @@ msgstr ""
 #. type: heading **
 #: applications/emacs/early-init.org:42
 #, fuzzy, no-wrap
-#| msgid "disable backup files"
 msgid "disable lock files"
-msgstr "ファイルのバックアップを作らないようにする"
+msgstr "ロックファイルを作らないようにする"
 
 #. type: paragraph
 #: applications/emacs/early-init.org:44
